<resources>
    <string name="project_name">ProjectPlaftak</string>
    <string name="app_name">Jerseys store</string>
    <string name="league">League:</string>
    <string name="gender">Gender:</string>
    <string name="material">Material:</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="jersey">jersey</string>
    <string name="landOrientation">land</string>
    <string name="portOrientation">port</string>
    <string name="smallSize">S</string>
    <string name="mediumSize">M</string>
    <string name="largeSize">L</string>
    <string name="size">Size:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="continuationCheck">Are you sure you want to continue?</string>
    <string name="price">Price:</string>
    <string name="accessingError">Error while accessing data!</string>
    <string name="appOrderChannel">appOrderChannel</string>
    <string name="orderNotificationChannel">Order notifications</string>
    <string name="messagingToken">Messaging token</string>
    <string name="callText">Call Us:</string>
    <string name="callButton">Call Button</string>
    <string name="callPermission">Calling permission has to be enabled!</string>
    <string name="phoneNumber">tel:0987654321</string>
    <string name="jerseyCollection">Our Jerseys Collection</string>
    <string name="grizzlies">Memphis Grizzlies</string>
    <string name="apiUrl">http://192.168.75.1:45455/</string>
    <string name="widgetJersey">widgetJersey</string>
    <string name="widgetUpdate">widgetUpdate</string>
    <string name="euroSymbol">€</string>
    <string name="successfulOrder">Successfully ordered jersey</string>
    <string name="storeReturn">Click here to return to the store!</string>
    <string name="orderedJersey">orderedJersey</string>
    <string name="promoNotificationChannel">Promo notifications</string>
    <string name="appPromoChannel">appPromoChannel</string>
    <string name="successfulOrderClick">Click to see the jersey!</string>
    <string name="broadcastJersey">broadcastJersey</string>
    <string name="exclamationSymbol">!</string>
</resources>